Issue #1848896 by stuzog: Fixing checkbox and radio alignment issues in product IEF form

--- a/scss/contrib.scss
+++ b/scss/contrib.scss
@@ -212,6 +212,15 @@ tr.even {
   float: left; /* LTR */
   margin-right: 10px; /* LTR */
 }
+/* Handle Radios and Checkboxes a bit differently */
+.ief-product-details .form-type-radio,
+.ief-product-details .form-type-checkbox {
+  clear: left; /* LTR */
+
+  label {
+    float: none;
+  }
+}
 #module-filter-squeeze .form-item-module-filter-name {
   clear: none;
 }
